continuing with changes