@@ -2,59 +2,59 @@ package com.example.app.services.storage;
 
 
 import com.example.app.config.FileStorageProperties;
-import com.example.app.entities.*;
+import com.example.app.entities.File;
+import com.example.app.entities.FileKind;
+import com.example.app.entities.Role;
+import com.example.app.entities.User;
 import com.example.app.exception.FileNotFoundException;
 import com.example.app.exception.IllegalTypeOfFileException;
 import com.example.app.exception.UserNotFoundException;
-import com.example.app.models.responses.common.UserWithFiles;
 import com.example.app.models.responses.file.AdminHrManagerFileResponse;
 import com.example.app.models.responses.file.FileResourceResponse;
 import com.example.app.models.responses.file.FileResponseEntity;
 import com.example.app.models.responses.file.UserFileResponse;
-import com.example.app.models.responses.user.AdminUserResponse;
-import com.example.app.models.responses.user.OtherUserResponse;
 import com.example.app.repositories.FileRepository;
 import com.example.app.repositories.UserRepository;
 import com.example.app.services.FileStorageService;
-import com.example.app.services.JwtService;
 import com.example.app.tool.utils.ExcelFileGenerator;
-import com.example.app.utils.file.FileSizeConverter;
 import com.example.app.utils.common.EntityResponseCommonConverterImpl;
 import com.example.app.utils.file.EntityResponseFileConverterImp;
 import com.example.app.utils.file.FileContent;
+import com.example.app.utils.file.FileSizeConverter;
 import com.example.app.utils.user.EntityResponseUserConverterImpl;
-import jakarta.persistence.criteria.CriteriaBuilder;
 import org.instancio.Instancio;
 import org.junit.jupiter.api.*;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.CsvSource;
 import org.junit.jupiter.params.provider.ValueSource;
-import org.mockito.*;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.MockitoAnnotations;
 import org.springframework.core.io.FileSystemResource;
 import org.springframework.mock.web.MockMultipartFile;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.context.SecurityContext;
-import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.util.FileSystemUtils;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.FileInputStream;
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.security.Principal;
 import java.time.LocalDateTime;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.time.temporal.ChronoUnit;
+import java.util.List;
+import java.util.Optional;
+import java.util.Set;
+import java.util.UUID;
 
 import static org.instancio.Select.field;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anySet;
 import static org.mockito.Mockito.when;
-
+@ActiveProfiles("unit")
 @ContextConfiguration(classes = FileStorageProperties.class)
 public class FileStorageServicePositiveUnitTest {
     @InjectMocks
@@ -77,7 +77,7 @@ public class FileStorageServicePositiveUnitTest {
     @BeforeEach
     void setUp() throws IOException {
         MockitoAnnotations.openMocks(this);
-        fileStorageService = new FileStorageService( fileRepo,fileConverter,storageProperties);
+        fileStorageService = new FileStorageService(fileRepo,fileConverter,storageProperties);
     }
     @AfterEach
     void tearDown() {
@@ -88,9 +88,9 @@ public class FileStorageServicePositiveUnitTest {
     static void init() throws IOException {
         Files.createDirectories(storageProperties.getTimesheet());
         Files.createDirectories(storageProperties.getEvaluation());
-        Assertions.assertTrue(Files.exists(storageProperties.getRoot()));
-        Assertions.assertTrue(Files.exists(storageProperties.getTimesheet()));
-        Assertions.assertTrue(Files.exists(storageProperties.getEvaluation()));
+        assertTrue(Files.exists(storageProperties.getRoot()));
+        assertTrue(Files.exists(storageProperties.getTimesheet()));
+        assertTrue(Files.exists(storageProperties.getEvaluation()));
     }
     @AfterAll
     static void tearDownAfterAll() throws IOException {
@@ -110,339 +110,200 @@ public class FileStorageServicePositiveUnitTest {
         this.roleValue = "USER";
         setUpPrincipal();
         var testExcelFile = ExcelFileGenerator.generateExcelFile();
-        byte[] content = Files.readAllBytes(testExcelFile.toPath());
-        MultipartFile multipartFile = new MockMultipartFile();
-        var file = Instancio.of(File.class)
-                .set(field("filename"),multipartFile.getOriginalFilename())
-                .set(field("fileType"),multipartFile.getContentType())
-                .create();
-        var adminResponse = AdminHrManagerFileResponse.builder()
-                .fileId(file.getFileId()).filename(file.getFilename())
-                .fileSize(FileSizeConverter.convert(file.getFileSize()))
-                .fileType(file.getFileType()).uploadDate(file.getUploadDate())
-                .approved(file.getApproved()).approvedBy(currentUser.getEmail())
-                .approvedDate(file.getApprovedDate()).fileKind(file.getFileKind())
-                .uploadedBy(file.getUploadedBy().getEmail())
+        MultipartFile multipartFile;
+        try(InputStream stream = new FileInputStream(testExcelFile);){
+            multipartFile = new  MockMultipartFile(testExcelFile.getName(), testExcelFile.getName(),FileContent.xls.getFileContent(),stream);
+        }
+        var file = File.builder()
+                .fileId(UUID.randomUUID()).filename(multipartFile.getOriginalFilename())
+                .fileSize(multipartFile.getSize()).fileType(multipartFile.getContentType())
+                .uploadDate(LocalDateTime.now().truncatedTo(ChronoUnit.SECONDS))
+                .accessUrl("testUploads/timesheet/" +currentUser.getUserId() + "/" + multipartFile.getOriginalFilename())
+                .fileKind(FileKind.TIMESHEET).uploadedBy(currentUser)
                 .build();
-        var userResponse = UserFileResponse.builder()
-                .fileId(file.getFileId())
-                .filename(file.getFilename())
-                .fileSize(FileSizeConverter.convert(file.getFileSize()))
-                .approved(file.getApproved())
-                .approvedBy("user with this id" + file.getApprovedBy())
-                .approvedDate(file.getApprovedDate())
+        var expectedResponse = UserFileResponse.builder()
+                .fileId(file.getFileId()).filename(file.getFilename()).fileSize(FileSizeConverter.convert(file.getFileSize()))
+                .approved(file.getApproved()).approvedBy("user with this id" + file.getApprovedBy()).approvedDate(file.getApprovedDate())
                 .fileKind(file.getFileKind())
                 .build();
-        when(userRepo.findByEmail(any(String.class))).thenReturn(Optional.of(currentUser));
-        when(fileRepo.findFileByAccessUrl(any(String.class))).thenReturn(file);
-        if(List.of(Role.HR,Role.ADMIN,Role.MANAGER).contains(currentUser.getRole())){
-            when(fileConverter.fromFileToUser(file)).thenReturn(adminResponse);
-        }
-        else if(currentUser.getRole().equals(Role.USER)){
-            when(fileConverter.fromFileToUser(file)).thenReturn(userResponse);
-        }
-        when(fileConverter.extractMultipartInfo(any(), any(), any(), any())).thenReturn(file);
-        when(fileRepo.save(file)).thenReturn(file);
-        var response = fileStorageService.upload(multipartFile);
-        if(List.of(Role.HR,Role.ADMIN,Role.MANAGER).contains(currentUser.getRole())){
-            Assertions.assertNotNull(response);
-            Assertions.assertEquals(adminResponse,response);
-        }
-        else if(currentUser.getRole().equals(Role.USER)){
-            Assertions.assertNotNull(response);
-            Assertions.assertEquals(userResponse,response);
-        }
+        when(fileStorageService.saveInDatabase(multipartFile,currentUser,Path.of(file.getAccessUrl()),FileKind.TIMESHEET)).thenReturn(expectedResponse);
+        var response = fileStorageService.upload(multipartFile,this.principal);
+        assertEquals(expectedResponse, response);
+        assertTrue(Files.exists(Path.of(file.getAccessUrl())));
     }
     @Test
     @DisplayName("Should retrieve a specific file both filesystem and database")
-    void download() throws UserNotFoundException, FileNotFoundException {
-        var file = File.builder()
-                .fileId(UUID.randomUUID())
-                .filename("testExcelFile.xlsx")
-                .fileSize(5L)
-                .fileType(FileContent.xlsx.getFileContent())
-                .accessUrl("C:\\Users\\georgios.kakavas\\Downloads\\rootAplication\\app\\src\\test\\testResources\\testExcelFile.xlsx")
-                .fileKind(FileKind.TIMESHEET)
+    void download() throws FileNotFoundException {
+        this.roleValue = "USER";
+        setUpPrincipal();
+        java.io.File file = Path.of("testWordFile.docx").toFile();
+        var fileInDB = File.builder()
+                .fileId(UUID.randomUUID()).filename(file.getName()).fileSize(file.length())
+                .fileType(FileContent.docx.getFileContent()).uploadDate(LocalDateTime.now().truncatedTo(ChronoUnit.SECONDS))
+                .accessUrl(Path.of("testUploads/evaluations/" + currentUser.getUserId() + "/" + file.getName()).toString())
+                .fileKind(FileKind.EVALUATION).uploadedBy(currentUser)
                 .build();
-        var currentUser = Instancio.create(User.class);
         FileResponseEntity expectedResponse = FileResourceResponse.builder()
-                .fileName(file.getFilename())
-                .fileType(file.getFileType())
-                .resource(new FileSystemResource("C:\\Users\\georgios.kakavas\\Downloads\\rootAplication\\app\\src\\test\\testResources\\testExcelFile.xlsx"))
+                .fileName(file.getName()).fileType(FileContent.docx.getFileContent()).resource(new FileSystemResource(file))
                 .build();
-        when(fileRepo.existsByFileIdAndFileKind(any(UUID.class),any(FileKind.class))).thenReturn(true);
-        when(fileRepo.findById(any(UUID.class))).thenReturn(Optional.of(file));
-        when(userRepo.findByEmail(any(String.class))).thenReturn(Optional.of(currentUser));
-        when(fileConverter.fromFileToResource(file)).thenReturn(expectedResponse);
-        var response = fileStorageService.download(file.getFileId(),FileKind.TIMESHEET);
-        Assertions.assertEquals(expectedResponse,response);
-        Assertions.assertNotNull(response);
+        when(fileRepo.findById(fileInDB.getFileId())).thenReturn(Optional.of(fileInDB));
+        fileConverter.fromFileToResource(fileInDB);
+        var response = fileStorageService.download(fileInDB.getFileId(),FileKind.EVALUATION,this.principal);
+        assertNotNull(response);
+        assertEquals(expectedResponse,response);
+
     }
     @ParameterizedTest
     @ValueSource(strings = {"TIMESHEET","EVALUATION"})
-    @DisplayName("Should return the suitable response of all selected files files and for admin users")
+    @DisplayName("Should return the suitable response of all files in admin response")
     void readAllForAdmin(String fileKind) throws UserNotFoundException {
+        this.roleValue = "ADMIN";
+        setUpPrincipal();
         var fileKindTestObject = FileKind.valueOf(fileKind);
-        var currentUser = Instancio.of(User.class)
-                .set(field("role"), Role.ADMIN)
-                .create();
-        when(userRepo.findByEmail(any(String.class))).thenReturn(Optional.of(currentUser));
-        var adminFiles = Instancio.stream(File.class)
-                .limit(5)
-                .peek(file -> file.setFileKind(fileKindTestObject)).toList();
-        when(fileRepo.findAllByFileKind(any(FileKind.class))).thenReturn(adminFiles);
-        Set<User> users = new HashSet<>();
-        Set<UserWithFiles> expectedResponse = new HashSet<>();
-        for (File file : adminFiles) {
-            users.add(file.getUploadedBy());
-        }
-        for (User user : users) {
-            expectedResponse.add(new UserWithFiles(
-                    AdminUserResponse.builder()
-                            .userId(user.getUserId()).firstname(user.getFirstname())
-                            .lastname(user.getLastname()).email(user.getEmail())
-                            .specialization(user.getSpecialization()).currentProject(user.getCurrentProject())
-                            .groupName(user.getGroup().getGroupName()).createdBy("user with this id" + user.getCreatedBy())
-                            .registerDate(user.getRegisterDate()).lastLogin(user.getLastLogin()).role(user.getRole())
-                            .build(), List.copyOf(
-                    user.getUserHasFiles().stream().map(file ->
-                                    AdminHrManagerFileResponse.builder()
-                                            .fileId(file.getFileId())
-                                            .filename(file.getFilename())
-                                            .fileSize(FileSizeConverter.convert(file.getFileSize()))
-                                            .fileType(file.getFileType())
-                                            .uploadDate(file.getUploadDate())
-                                            .approved(file.getApproved())
-                                            .approvedBy("approveBy user with this id" + file.getApprovedBy())
-                                            .approvedDate(file.getApprovedDate())
-                                            .fileKind(file.getFileKind())
-                                            .uploadedBy(file.getUploadedBy().getEmail())
-                                            .build())
-                            .collect(Collectors.toList())
-            )
-            ));
-            when(commonConverter.usersWithFilesList(anySet())).thenReturn(expectedResponse);
-            var response = fileStorageService.readAll(FileKind.EVALUATION);
-            Assertions.assertEquals(expectedResponse, response);
-        }
+        var filesInDB = Instancio.stream(File.class)
+                .peek(file -> file.setFileKind(fileKindTestObject))
+                .limit(20)
+                .toList();
+        var expectedResponse = filesInDB.stream().map(file -> (FileResponseEntity) AdminHrManagerFileResponse.builder()
+                        .fileId(file.getFileId()).filename(file.getFilename())
+                        .fileSize(FileSizeConverter.convert(file.getFileSize())).fileType(file.getFileType())
+                        .uploadDate(file.getUploadDate()).approved(file.getApproved())
+                        .approvedBy("user with id " + file.getApprovedBy()).approvedDate(file.getApprovedDate())
+                        .fileKind(file.getFileKind()).uploadedBy(file.getUploadedBy().getEmail())
+                        .build())
+                .toList();
+        when(fileRepo.findAllByFileKind(fileKindTestObject)).thenReturn(filesInDB);
+        when(fileConverter.fromFileListToAdminList(Set.copyOf(filesInDB))).thenReturn(expectedResponse);
+        var response = fileStorageService.readAll(FileKind.EVALUATION,this.principal);
+        assertEquals(expectedResponse, response);
     }
-    @ParameterizedTest
-    @CsvSource({"EVALUATION,MANAGER"})
-    @DisplayName("Should return the suitable response of all files and for manager user")
-    void readAllForManager(String fileKind,String role) throws UserNotFoundException {
-        var fileKindTestObject = FileKind.valueOf(fileKind);
-        var roleTestObject = Role.valueOf(role);
-        var currentUser = Instancio.of(User.class)
-                .set(field("role"), roleTestObject)
-                .create();
-        when(userRepo.findByEmail(any(String.class))).thenReturn(Optional.of(currentUser));
-        Set<UserWithFiles> expectedResponse = new HashSet<>();
-        var group = Instancio.create(Group.class);
-            var managerFiles = Instancio.stream(File.class)
-                    .limit(5)
-                    .peek(file -> {
-                        file.setFileKind(fileKindTestObject);
-                        file.getUploadedBy().setGroup(group);
-                    }).toList();
-            when(fileRepo.findAllByFileKindAndUploadedBy_Group(any(FileKind.class),any(Group.class))).thenReturn(managerFiles);
-        List<User> userList = managerFiles.stream().map(File::getUploadedBy).distinct().toList();
-        for (User user : userList) {
-            expectedResponse.add(new UserWithFiles(
-                    OtherUserResponse.builder()
-                            .userId(user.getUserId())
-                            .firstname(user.getFirstname())
-                            .lastname(user.getLastname())
-                            .email(user.getEmail())
-                            .specialization(user.getSpecialization())
-                            .currentProject(user.getCurrentProject())
-                            .groupName(user.getGroup().getGroupName())
-                            .build(), List.copyOf(
-                    user.getUserHasFiles().stream().map(file ->
-                                    AdminHrManagerFileResponse.builder()
-                                            .fileId(file.getFileId())
-                                            .filename(file.getFilename())
-                                            .fileSize(FileSizeConverter.convert(file.getFileSize()))
-                                            .fileType(file.getFileType())
-                                            .uploadDate(file.getUploadDate())
-                                            .approved(file.getApproved())
-                                            .approvedBy("approveBy user with this id" + file.getApprovedBy())
-                                            .approvedDate(file.getApprovedDate())
-                                            .fileKind(file.getFileKind())
-                                            .uploadedBy(file.getUploadedBy().getEmail())
-                                            .build())
-                            .collect(Collectors.toList())
-            )));
-        }
-        when(commonConverter.usersWithFilesList(anySet())).thenReturn(expectedResponse);
-        var response = fileStorageService.readAll(FileKind.EVALUATION);
-        Assertions.assertEquals(expectedResponse, response);
-    }
-
-    @ParameterizedTest
-    @CsvSource({"TIMESHEET,HR"})
-    @DisplayName("Should return the suitable response of all files and for HR users")
-    void readAllForHR(String fileKind,String role) throws UserNotFoundException {
-        var fileKindTestObject = FileKind.valueOf(fileKind);
-        var roleTestObject = Role.valueOf(role);
-        var currentUser = Instancio.of(User.class)
-                .set(field("role"), roleTestObject)
-                .create();
-        when(userRepo.findByEmail(any(String.class))).thenReturn(Optional.of(currentUser));
-        Set<UserWithFiles> expectedResponse = new HashSet<>();
-        var hrFiles = Instancio.stream(File.class)
-                .limit(5)
-                .peek(file -> file.setFileKind(fileKindTestObject)).toList();
-        when(fileRepo.findAllByFileKind(any(FileKind.class))).thenReturn(hrFiles);
-        List<User> userList = hrFiles.stream().map(File::getUploadedBy).distinct().toList();
-        for (User user : userList) {
-            expectedResponse.add(new UserWithFiles(
-                    OtherUserResponse.builder()
-                            .userId(user.getUserId())
-                            .firstname(user.getFirstname())
-                            .lastname(user.getLastname())
-                            .email(user.getEmail())
-                            .specialization(user.getSpecialization())
-                            .currentProject(user.getCurrentProject())
-                            .groupName(user.getGroup().getGroupName())
-                            .build(), List.copyOf(
-                    user.getUserHasFiles().stream().map(file ->
-                                    AdminHrManagerFileResponse.builder()
-                                            .fileId(file.getFileId())
-                                            .filename(file.getFilename())
-                                            .fileSize(FileSizeConverter.convert(file.getFileSize()))
-                                            .fileType(file.getFileType())
-                                            .uploadDate(file.getUploadDate())
-                                            .approved(file.getApproved())
-                                            .approvedBy("approveBy user with this id" + file.getApprovedBy())
-                                            .approvedDate(file.getApprovedDate())
-                                            .fileKind(file.getFileKind())
-                                            .uploadedBy(file.getUploadedBy().getEmail())
-                                            .build())
-                            .collect(Collectors.toList())
-            )));
-        }
-        when(commonConverter.usersWithFilesList(anySet())).thenReturn(expectedResponse);
-        var response = fileStorageService.readAll(FileKind.TIMESHEET);
-        Assertions.assertEquals(expectedResponse, response);
-    }
-
     @ParameterizedTest
     @CsvSource({
-            "TIMESHEET,USER",
-            "EVALUATION,USER"
+            "EVALUATION,MANAGER",
+            "TIMESHEET,HR"
     })
-    @DisplayName("Should return the suitable response of user files and for USER role")
-    void readAllForUser(String fileKind,String role) throws UserNotFoundException {
+    @DisplayName("Should return the suitable response of all files and for manager user")
+    void readAllForManager(String fileKind,String roleValue) throws UserNotFoundException {
+        this.roleValue = roleValue;
+        setUpPrincipal();
         var fileKindTestObject = FileKind.valueOf(fileKind);
-        var roleTestObject = Role.valueOf(role);
-        var currentUser = Instancio.of(User.class)
-                .set(field("role"), roleTestObject)
-                .create();
-        currentUser.getUserHasFiles().forEach(file -> file.setFileKind(fileKindTestObject));
-        when(userRepo.findByEmail(any(String.class))).thenReturn(Optional.of(currentUser));
-        when(fileRepo.findAllByFileKindAndUploadedBy(any(FileKind.class),any(User.class))).thenReturn(currentUser.getUserHasFiles());
-        var otherUserResponse = OtherUserResponse.builder()
-                        .userId(currentUser.getUserId())
-                        .firstname(currentUser.getFirstname())
-                        .lastname(currentUser.getLastname())
-                        .email(currentUser.getEmail())
-                        .specialization(currentUser.getSpecialization())
-                        .currentProject(currentUser.getCurrentProject())
-                        .groupName(currentUser.getGroup().getGroupName())
-                        .build();
-        var userFileList = currentUser.getUserHasFiles().stream().map(file ->
-                        UserFileResponse.builder()
-                                .fileId(file.getFileId())
-                                .filename(file.getFilename())
-                                .fileSize(FileSizeConverter.convert(file.getFileSize()))
-                                .approved(file.getApproved())
-                                .approvedBy("approveBy user with this id" + file.getApprovedBy())
-                                .approvedDate(file.getApprovedDate())
-                                .fileKind(file.getFileKind())
-                                .build())
+        var filesInDB = Instancio.stream(File.class)
+                .peek(file -> file.setFileKind(fileKindTestObject))
+                .limit(20)
                 .toList();
-        var expectedResponse = Set.of(UserWithFiles.builder()
-                .user(otherUserResponse)
-                .files(List.copyOf(userFileList))
-                .build());
-        when(userConverter.fromUserToOtherUser(any(User.class))).thenReturn(otherUserResponse);
-        when(fileConverter.fromFileListToUserFileList(currentUser.getUserHasFiles())).thenReturn(List.copyOf(userFileList));
-        when(commonConverter.usersWithFilesList(anySet())).thenReturn(expectedResponse);
-        var response = fileStorageService.readAll(FileKind.TIMESHEET);
-        Assertions.assertEquals(expectedResponse, response);
+        if(currentUser.getRole().equals(Role.MANAGER)){
+            filesInDB.forEach(file-> file.getUploadedBy().setGroup(currentUser.getGroup()));
+        }
+        var expectedResponse = filesInDB.stream().map(file -> AdminHrManagerFileResponse.builder()
+                        .fileId(file.getFileId()).filename(file.getFilename())
+                        .fileSize(FileSizeConverter.convert(file.getFileSize())).fileType(file.getFileType())
+                        .uploadDate(file.getUploadDate()).approved(file.getApproved())
+                        .approvedBy("user with id " + file.getApprovedBy()).approvedDate(file.getApprovedDate())
+                        .fileKind(file.getFileKind()).uploadedBy(file.getUploadedBy().getEmail())
+                        .build())
+                .toList();
+        when(fileRepo.findAllByFileKind(FileKind.TIMESHEET)).thenReturn(filesInDB);
+        when(fileRepo.findAllByFileKindAndUploadedBy_Group(FileKind.EVALUATION,currentUser.getGroup())).thenReturn(filesInDB);
+        when(fileConverter.fromFileListToAdminList(Set.copyOf(filesInDB))).thenReturn(List.copyOf(expectedResponse));
+        var response = fileStorageService.readAll(FileKind.valueOf(fileKind),this.principal);
+        assertNotNull(response);
+        assertEquals(expectedResponse, response);
+    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {"TIMESHEET","EVALUATION"})
+    @DisplayName("Should return the suitable response of user files and for USER role")
+    void readAllForUser(String fileKind) throws UserNotFoundException {
+        this.roleValue = "USER";
+        setUpPrincipal();
+        var fileKindTestObject = FileKind.valueOf(fileKind);
+        var filesInDB = Instancio.stream(File.class)
+                .peek(file -> file.setFileKind(fileKindTestObject))
+                .limit(20)
+                .toList();
+        var expectedResponse = filesInDB.stream().map(file -> (FileResponseEntity) UserFileResponse.builder()
+                        .fileId(file.getFileId()).filename(file.getFilename())
+                        .fileSize(FileSizeConverter.convert(file.getFileSize())).approved(file.getApproved())
+                        .fileKind(file.getFileKind())
+                        .approvedBy("user with id " + file.getApprovedBy()).approvedDate(file.getApprovedDate())
+                        .build())
+                .toList();
+        when(fileRepo.findAllByFileKindAndUploadedBy(fileKindTestObject,currentUser)).thenReturn(Set.copyOf(filesInDB));
+        when(fileConverter.fromFileListToUserFileList(Set.copyOf(filesInDB))).thenReturn(expectedResponse);
+        var response = fileStorageService.readAll(FileKind.EVALUATION,this.principal);
+        assertEquals(expectedResponse, response);
     }
 
     @Test
     @DisplayName("Should delete a specified file both filesystem and database")
-    void delete() throws UserNotFoundException, FileNotFoundException {
-        var currentUser = Instancio.of(User.class)
-                .set(field("role"),Role.valueOf("USER"))
-                .create();
+    void delete() throws UserNotFoundException, FileNotFoundException, java.io.FileNotFoundException {
+        this.roleValue = "USER";
+        setUpPrincipal();
+        java.io.File file = Path.of("testExcelFile.xlsx").toFile();
+        Path pathOfFileToDelete = Path.of("testUploads/timesheets/").resolve(currentUser.getUserId().toString()).resolve(file.getName());
         var fileToDelete = Instancio.of(File.class)
-                .set(field("accessUrl"),tempTestFile.getAbsolutePath())
+                .set(field(File::getAccessUrl),pathOfFileToDelete)
+                .set(field(File::getFileType),FileContent.xlsx.getFileContent())
+                .set(field(File::getFileKind),FileKind.TIMESHEET)
+                .set(field(File::getUploadedBy),currentUser)
                 .create();
-        fileToDelete.setUploadedBy(currentUser);
+        try(InputStream stream = new FileInputStream(file)){
+            Files.copy(stream,pathOfFileToDelete);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
         when(fileRepo.findById(any(UUID.class))).thenReturn(Optional.of(fileToDelete));
         when(userRepo.findByEmail(any(String.class))).thenReturn(Optional.of(currentUser));
         var response = fileStorageService.delete(fileToDelete.getFileId());
-        Assertions.assertTrue(response);
+        assertTrue(response);
     }
 
     @Test
     @DisplayName("Should delete all directories")
     void deleteAll() throws IOException {
-        var testPath = Files.createDirectories(storageProperties.getEvaluation());
-        Assertions.assertTrue(Files.exists(testPath));
+        if(!Files.exists(storageProperties.getRoot())){
+            Files.createDirectories(storageProperties.getEvaluation());
+            Files.createDirectories(storageProperties.getTimesheet());
+        }
+        assertTrue(Files.exists(storageProperties.getEvaluation()));
+        assertTrue(Files.exists(storageProperties.getTimesheet()));
         fileStorageService.deleteAll();
         Assertions.assertFalse(Files.exists(storageProperties.getRoot()));
     }
 
-    @Test
+    @ParameterizedTest
+    @ValueSource(strings = {"ADMIN","MANAGER"})
     @DisplayName("Should approve an evaluation document")
-    void approveEvaluation() throws UserNotFoundException, FileNotFoundException {
-        var currentUser = Instancio.of(User.class)
-                .set(field("role"),Role.valueOf("MANAGER"))
-                .create();
+    void approveEvaluation(String roleValue) throws FileNotFoundException {
+        this.roleValue = roleValue;
+        setUpPrincipal();
         var fileToApprove = Instancio.of(File.class)
-                .ignore(field("approved"))
-                .ignore(field("approvedBy"))
-                .ignore(field("approvedDate"))
-                .set(field("fileKind"),FileKind.valueOf("EVALUATION"))
+                .ignore(field(File::getApprovedBy))
+                .ignore(field(File::getApprovedDate))
+                .set(field(File::getApproved),false)
+                .set(field(File::getFileKind),FileKind.EVALUATION)
                 .create();
-        fileToApprove.getUploadedBy().setGroup(currentUser.getGroup());
         var approvedFile = File.builder()
-                .fileId(fileToApprove.getFileId())
-                .filename(fileToApprove.getFilename())
-                .fileSize(fileToApprove.getFileSize())
-                .fileType(fileToApprove.getFileType())
-                .uploadDate(fileToApprove.getUploadDate())
-                .accessUrl(fileToApprove.getAccessUrl())
-                .approved(true)
-                .approvedBy(currentUser.getUserId())
-                .approvedDate(LocalDateTime.now())
-                .fileKind(fileToApprove.getFileKind())
-                .uploadedBy(fileToApprove.getUploadedBy())
+                .fileId(fileToApprove.getFileId()).filename(fileToApprove.getFilename()).fileSize(fileToApprove.getFileSize())
+                .fileType(fileToApprove.getFileType()).uploadDate(fileToApprove.getUploadDate()).accessUrl(fileToApprove.getAccessUrl())
+                .approved(true).approvedBy(currentUser.getUserId()).approvedDate(LocalDateTime.now().truncatedTo(ChronoUnit.SECONDS))
+                .fileKind(fileToApprove.getFileKind()).uploadedBy(fileToApprove.getUploadedBy())
                 .build();
         var expectedResponse = AdminHrManagerFileResponse.builder()
-                .fileId(approvedFile.getFileId())
-                .filename(approvedFile.getFilename())
-                .fileSize(FileSizeConverter.convert(approvedFile.getFileSize()))
-                .fileType(approvedFile.getFileType())
-                .uploadDate(approvedFile.getUploadDate())
-                .approved(approvedFile.getApproved())
-                .approvedBy(currentUser.getEmail())
-                .approvedDate(approvedFile.getApprovedDate())
-                .fileKind(approvedFile.getFileKind())
-                .uploadedBy(approvedFile.getUploadedBy().getEmail())
+                .fileId(approvedFile.getFileId()).filename(approvedFile.getFilename())
+                .fileSize(FileSizeConverter.convert(approvedFile.getFileSize())).fileType(approvedFile.getFileType())
+                .uploadDate(approvedFile.getUploadDate()).approved(approvedFile.getApproved())
+                .approvedBy("user with id " + approvedFile.getApprovedBy()).approvedDate(approvedFile.getApprovedDate())
+                .fileKind(approvedFile.getFileKind()).uploadedBy(approvedFile.getUploadedBy().getEmail())
                 .build();
-        when(userRepo.findByEmail(any(String.class))).thenReturn(Optional.of(currentUser));
-        when(fileRepo.findById(any(UUID.class))).thenReturn(Optional.of(fileToApprove));
+        when(fileRepo.findById(fileToApprove.getFileId())).thenReturn(Optional.of(fileToApprove));
         when(fileConverter.approveFile(fileToApprove,currentUser)).thenReturn(approvedFile);
         when(fileRepo.save(approvedFile)).thenReturn(approvedFile);
         when(fileConverter.fromFileToAdmin(approvedFile)).thenReturn(expectedResponse);
-        var response = fileStorageService.approveEvaluation(fileToApprove.getFileId());
-        Assertions.assertNotNull(response);
+        var response = fileStorageService.approveEvaluation(fileToApprove.getFileId(),this.principal);
+        assertNotNull(response);
         Assertions.assertEquals(expectedResponse,response);
+
     }
 
     @Test
@@ -474,7 +335,7 @@ public class FileStorageServicePositiveUnitTest {
         when(fileRepo.save(extractedFileEntity)).thenReturn(extractedFileEntity);
         when(fileConverter.fromFileToUser(extractedFileEntity)).thenReturn(expectedResponse);
         var response = fileStorageService.saveInDatabase(multipartFile,currentUser,Path.of(multipartFile.getResource().toString()),FileKind.TIMESHEET);
-        Assertions.assertNotNull(response);
+        assertNotNull(response);
         Assertions.assertEquals(expectedResponse,response);
     }
 }
